<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:visibility="visible"
    tools:context=".ui.translator.TranslatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_view_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_selector">

        <FrameLayout
            android:id="@+id/camera_frame"
            android:layout_width="409dp"
            android:layout_height="302dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </FrameLayout>

        <TextView
            android:id="@+id/camera_type"
            android:layout_width="123dp"
            android:layout_height="47dp"
            android:background="@null"
            android:text="Front Camera"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/classitext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Good"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_view_constraint"
        app:layout_constraintVertical_bias="0.093" />

    <Spinner
        android:id="@+id/category_selector"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Switch Camera"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classitext"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/translator_camera_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Allow Camera Permission"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>