<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_translator">

    <fragment
        android:id="@+id/navigation_translator"
        android:name="com.example.prototypeb.ui.translator.TranslatorFragment"
        android:label="@string/title_translator"
        tools:layout="@layout/fragment_translator" />
...
