<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="Welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="Connecting the Deaf to the World"
        android:textColor="@color/selected_or_secondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_desc"
        app:layout_constraintVertical_bias="0.052">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_first_name" />


            <HorizontalScrollView
                android:id="@+id/icon_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/background_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="20dp">


                    <ImageButton
                        android:id="@+id/male_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="5dp"
                        android:adjustViewBounds="false"
                        android:background="@color/primary"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/male_icon" />

                    <ImageButton
                        android:id="@+id/female_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:visibility="visible"
                        app:layout_constraintStart_toEndOf="@id/male_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/female_icon" />

                    <ImageButton
                        android:id="@+id/fish_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        app:layout_constraintStart_toEndOf="@+id/female_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/fish_icon" />

                    <ImageButton
                        android:id="@+id/bear_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        app:layout_constraintStart_toEndOf="@+id/fish_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bear_icon" />

                    <ImageButton
                        android:id="@+id/thor_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        app:layout_constraintStart_toEndOf="@+id/bear_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/thor_icon" />

                    <ImageButton
                        android:id="@+id/ironman_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        app:layout_constraintStart_toEndOf="@+id/thor_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/iron_man_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="Personal Icon"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_last_name" />

            <ImageButton
                android:id="@+id/register_complete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:background="@color/primary"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_scroll_view"
                app:srcCompat="@drawable/abc_vector_test" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>